--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@import url('reset.css');
+
+:root{
+    --cor-fundo: #000000;
+    --cor-texto: #FFFFFF;
+    --cor--fundo-card:blue;
+
+}
+html{
+    font-size: 14px;
+}
+
 *{
     margin:0;
     padding:0;
@@ -5,19 +17,23 @@
 
 body{
     font-family: "Inter""sans-serif";
-    background-color: #d5d5c9;
+    background-color:var(--cor-fundo)
 }
 
 nav{
-    background-color: #4158A6;
+    background-color: #000000;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    height: 8vh;
+    height: 10vh;
+    padding: 0px 40px;
 }
 .logo{
-    text-transform: uppercase;
-    letter-spacing: 4px;
+    width: 75px;
+ 
+
+    /* text-transform: uppercase;
+    letter-spacing: 4px; */
 }
 
 a{
@@ -42,7 +58,74 @@ ul{
 }
 
 main{
-    height: 92vh;
-    background-image: url('imgens/agatha.loja.webp');
+    height: 100vh;
+    background-image: url('imgens/diabo.jpg');
+    background-repeat: no-repeat;
+    padding: 20px;
 
+}
+h2,h3,strong{
+    font-weight: bolder;
+} 
+
+h1,h2,h3,strong,span{
+    color:white
+}
+.produtos-lista .produto span{ 
+    text-align: center;
+}
+
+video{
+    position: absolute;
+    width: 100vw;
+    height: 500px;
+    z-index: -1;
+    top: 150px;
+}
+
+.produtos-lista{
+    margin-top: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    gap:70px;
+
+    
+
+}
+
+.produtos-lista .produto{
+    /*Temporário*/
+    border: 1px solid white;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 18px;
+    flex-wrap: wrap;
+    border-radius: 20px;
+    padding: 14px;
+    box-shadow: 0px 0px 
+        12px 4px rgb(57, 57, 57);
+    transition: 0.5s;
+}
+
+.produtos-lista .produto:hover{
+    background-color: rgba(90, 90, 93, 0.373);
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+
+
+.produtos-lista .produto img{
+    width: 180px;
+}
+
+span{
+    text-decoration-color: antiquewhite;
+}
+
+iframe{
+    width: 1500px;
+    height: 1500px;
 }
